# coffee-beans-outbound-agent

./: .env.example  .gitignore  ARCHITECTURE.md  CLAUDE.md  QUICKSTART.md  README.md  agents.py  config.py  example_usage.py  main.py  prompts.py  pyproject.toml  requirements.txt  session.py  setup.sh  state.py
