[project]
name = "outbound-ai-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "fastapi==0.104.1",
    "langchain==0.1.13",
    "langgraph==0.0.49",
    "pydantic==2.5.0",
    "python-dotenv==1.0.0",
    "twilio==8.10.0",
    "uvicorn[standard]==0.24.0",
]
